package net.octosystems.foodversity.model.nutrition

import net.octosystems.foodversity.model.common.string.Name

data class Allergen(val name: Name)
